[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fourx-mamba"
version = "0.1.0"
description = "Clean public helper package for 4X Mamba checkpoints."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "huggingface_hub>=0.24",
  "safetensors>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]
